--- a/scss/findalab.scss
+++ b/scss/findalab.scss
@@ -38,7 +38,7 @@ $findalab-search-background: #f9f9f9 !default;
 
 /// Font size for day filter
 /// @type Number
-$findalab-day-filter-text-size: 14px !default;
+$findalab-day-filter-text-size: 18px !default;
 
 /// Color for nav
 /// @type Color
@@ -61,7 +61,7 @@ $findalab-results-background: #fff !default;
 $findalab-recommended-color: #ffa500 !default;
 
 /// @type Color
-$findalab-opennow-color: #30dd2f !default;
+$findalab-opennow-color: #30b32f !default;
 
 /// Recommended result border witdh
 /// @type Number
@@ -125,9 +125,9 @@ $findalab-hours-font-size: 15px !default;
   }
 }
 
-.findalab_main {
+.findalab{
   @extend %findalab-box;
- // display: none;
+  display: none;
 }
 
 .findalab-loading {
@@ -167,14 +167,14 @@ $findalab-hours-font-size: 15px !default;
 }
 
 .findalab__search__title {
-  text-align: center;
   margin: 0;
 }
 
 .findalab__search__desc {
-  margin: 1rem 3rem;
-
+  margin: 0;
+  margin-bottom: 0.5rem;
 }
+
 
 .findalab__search__user-location {
   background: $findalab-background;
@@ -184,8 +184,8 @@ $findalab-hours-font-size: 15px !default;
   line-height: 1;
   margin-bottom: 20px;
   padding: 0;
-  height:25px;
-  width:80px;
+  height:40px;
+  width:40%;
   border-radius: $findalab-radius;
 
 
@@ -195,7 +195,10 @@ $findalab-hours-font-size: 15px !default;
 }
 
 .findalab__search__day-filter {
+  display: block;
+  position: relative;
   margin-top: $findalab-padding;
+
 
   label {
     font-size: $findalab-day-filter-text-size;
@@ -415,9 +418,62 @@ $findalab-hours-font-size: 15px !default;
 
 .findalab__open__dot {
   color: $findalab-opennow-color;
-  font-size: 1.2em;
+  font-size: 2em;
+  position: relative;
+  top: 4px;
+  left:3px;
 }
 
+input[type=radio]{
+  position: absolute;
+  visibility: hidden;
+}
+
+.dayFilter {
+  display: inline-block;
+  position: relative;
+  margin-left: 20px;
+  padding: 0 20px;
+}
+ .check{
+  display: block;
+  position: absolute;
+  border: 2px solid #e3b77d;
+  border-radius: 100%;
+  height: 25px;
+  width: 25px;
+  top: 3px;
+  margin-left: -30px;
+	z-index: 5;
+	transition: border .25s linear;
+	-webkit-transition: border .25s linear;
+}
+
+
+ .check::before {
+  display: block;
+  position: absolute;
+	content: '';
+  border-radius: 100%;
+  height: 18px;
+  width: 18px;
+  top: 2px;
+	left: 1.7px;
+  margin: auto;
+
+}
+
+input[type=radio]:checked ~ .check {
+  border: 2px solid #ed9013;
+}
+
+input[type=radio]:checked ~ .check::before{
+  background: #ed9013;
+}
+
+input[type=radio]:checked ~ label{
+  color: #ed9013;
+}
 
 @keyframes fadeInOpacity {
   0% {
