--- a/template/findalab.html
+++ b/template/findalab.html
@@ -21,7 +21,7 @@
           <ul class="findalab__results is-active" data-findalab-result-list data-findalab-content="list">
           </ul>
           <div class="findalab__total">
-              <p data-findalab-total>No Results</p>
+              <span data-findalab-total>No Results</span>
           </div>
 
     </div>
