--- a/scss/findalab.scss
+++ b/scss/findalab.scss
@@ -153,7 +153,7 @@ $findalab-hours-font-size: 15px !default;
   background-color: $findalab-results-background;
   border-bottom: $findalab-border;
   border-radius: $findalab-radius;
-  margin-bottom: 5px;
+  margin-bottom: $findalab-padding/2;
   padding: $findalab-padding;
   box-shadow: $findalab-total-shadow;
 
@@ -212,7 +212,7 @@ $findalab-hours-font-size: 15px !default;
   border-radius: 0 0 $findalab-radius $findalab-radius;
   border-top: $findalab-border;
   box-shadow: $findalab-total-shadow;
-  padding: $findalab-padding;
+  padding: $findalab-padding/2;
   text-align: center;
 
   @media only screen and (min-width: $findalab-breakpoint) {
@@ -435,18 +435,16 @@ input[type=radio]{
   margin-left: 20px;
   padding: 0 20px;
 }
+
  .check{
   display: block;
   position: absolute;
   border: 2px solid #e3b77d;
   border-radius: 100%;
-  height: 25px;
-  width: 25px;
+  height: 26px;
+  width: 26px;
   top: 3px;
   margin-left: -30px;
-	z-index: 5;
-	transition: border .25s linear;
-	-webkit-transition: border .25s linear;
 }
 
 
@@ -458,7 +456,7 @@ input[type=radio]{
   height: 18px;
   width: 18px;
   top: 2px;
-	left: 1.7px;
+	left: 2px;
   margin: auto;
 
 }
