--- a/template/findalab.html
+++ b/template/findalab.html
@@ -1,5 +1,5 @@
 <div class="findalab">
-    <div class="findalab_box">
+    <div class="findalab__box">
         <div class="findalab__search">
             <h3 class="findalab__search__title" data-findalab-search-title></h3>
             <p class="findalab__search__desc" data-findalab-search-desc></p>
