--- a/scss/findalab.scss
+++ b/scss/findalab.scss
@@ -102,7 +102,7 @@ $findalab-hours-font-size: 15px !default;
 
 /// Color for the radio button
 /// @type Color
-$findlab-radio-button-color:  #ed9013!default;
+$findlab-radio-button-color: #ed9013 !default;
 
 // Styles
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -218,13 +218,14 @@ $findlab-radio-button-color:  #ed9013!default;
   box-shadow: $findalab-total-shadow;
   padding: $findalab-padding/2;
   text-align: center;
+  font-size: 20px;
 
   @media only screen and (min-width: $findalab-breakpoint) {
     width: $findalab-list-width;
   }
 }
 
-.findalab_box {
+.findalab__box {
   width: $findalab-list-width ;
   margin: 3rem 1rem;
   box-shadow: $findalab-total-shadow;
@@ -423,7 +424,7 @@ $findlab-radio-button-color:  #ed9013!default;
   font-size: 2em;
   position: relative;
   top: 4px;
-  left:3px;
+  left: 3px;
 }
 
 input[type=radio]{
@@ -431,48 +432,48 @@ input[type=radio]{
   visibility: hidden;
 }
 
-.dayFilter {
+.findalab__dayFilter {
   display: inline-block;
   position: relative;
   margin-left: 20px;
   padding: 0 20px;
+
+  .findalab__check {
+    display: block;
+    position: absolute;
+    border: 2px solid #e3b77d;
+    border-radius: 100%;
+    height: 26px;
+    width: 26px;
+    top: 3px;
+    margin-left: -30px;
+  }
+
+  .findalab__check::before {
+    display: block;
+    position: absolute;
+    content: '';
+    border-radius: 100%;
+    height: 18px;
+    width: 18px;
+    top: 2px;
+    left: 2px;
+    margin: auto;
+  }
+
+  input[type=radio]:checked ~ .findalab__check {
+    border: 2px solid #ed9013;
+  }
+
+  input[type=radio]:checked ~ .findalab__check::before {
+    background: $findlab-radio-button-color;
+  }
+
+  input[type=radio]:checked ~ label {
+    color: $findlab-radio-button-color;
+  }
 }
 
- .check{
-  display: block;
-  position: absolute;
-  border: 2px solid #e3b77d;
-  border-radius: 100%;
-  height: 26px;
-  width: 26px;
-  top: 3px;
-  margin-left: -30px;
-}
-
- .check::before {
-  display: block;
-  position: absolute;
-	content: '';
-  border-radius: 100%;
-  height: 18px;
-  width: 18px;
-  top: 2px;
-	left: 2px;
-  margin: auto;
-
-}
-
-input[type=radio]:checked ~ .check {
-  border: 2px solid #ed9013;
-}
-
-input[type=radio]:checked ~ .check::before{
-  background: $findlab-radio-button-color;
-}
-
-input[type=radio]:checked ~ label{
-  color: $findlab-radio-button-color;
-}
 
 @keyframes fadeInOpacity {
   0% {
