--- a/template/findalab.html
+++ b/template/findalab.html
@@ -1,21 +1,21 @@
 <div class="findalab">
   <div class="findalab__box__top">
-      <div class="findalab__search">
-          <h3 class="findalab__search__title" data-findalab-search-title></h3>
-          <p class="findalab__search__desc" data-findalab-search-desc></p>
-          <button class="findalab__search__user-location" type="button" data-findalab-user-location></button>
-          <div data-findalab-inputgroup-container>
-            <input type="text" data-findalab-search-field data-findalab-inputgroup-field>
-            <div data-findalab-inputgroup-button>
-              <button type="button" data-findalab-search-button data-qa-id="Findalab Search Button"></button>
-            </div>
-          </div>
-          <div data-findalab-day-filter class="findalab__search__day-filter"></div>
-          <div class="findalab__nav" data-findalab-nav>
-            <button type="button" class="findalab__nav__item is-active" data-findalab-nav-item="list">List View</button>
-            <button type="button" class="findalab__nav__item" data-findalab-nav-item="map">Map View</button>
-          </div>
+    <div class="findalab__search">
+      <h3 class="findalab__search__title" data-findalab-search-title></h3>
+      <p class="findalab__search__desc" data-findalab-search-desc></p>
+      <button class="findalab__search__user-location" type="button" data-findalab-user-location></button>
+      <div data-findalab-inputgroup-container>
+        <input type="text" data-findalab-search-field data-findalab-inputgroup-field>
+        <div data-findalab-inputgroup-button>
+          <button type="button" data-findalab-search-button data-qa-id="Findalab Search Button"></button>
+        </div>
       </div>
+      <div data-findalab-day-filter class="findalab__search__day-filter"></div>
+      <div class="findalab__nav" data-findalab-nav>
+        <button type="button" class="findalab__nav__item is-active" data-findalab-nav-item="list">List View</button>
+        <button type="button" class="findalab__nav__item" data-findalab-nav-item="map">Map View</button>
+      </div>
+    </div>
   </div>
 
   <ul class="findalab__hide" data-findalab-results-template>
@@ -25,7 +25,8 @@
       <h4 class="findalab__ihc__title" data-findalab-ihc-title></h4>
       <p data-findalab-ihc-description></p>
       <p>
-        <strong data-findalab-ihc-time-title></strong><br>
+        <strong data-findalab-ihc-time-title></strong>
+        <br>
         <span data-findalab-ihc-time-details></span>
       </p>
       <div>
@@ -44,7 +45,8 @@
       <div data-findalab-result-simple-hours></div>
       <div data-findalab-result-structured-hours>
         <span data-findlab-lab-hours-open class="findalab__open">
-          <strong>Open Now</strong><span class="findalab__open__dot">●</span>
+          <strong>Open Now</strong>
+          <span class="findalab__open__dot">●</span>
         </span>
         <a href="#" data-findalab-toggle-hours>Show Hours ▼</a>
 
@@ -81,7 +83,7 @@
     <ul class="findalab__results is-active" data-findalab-result-list data-findalab-content="list">
     </ul>
     <div class="findalab__total">
-        <span data-findalab-total>No Results</span>
+      <span data-findalab-total>No Results</span>
     </div>
   </div>
 </div>
